# Projections-Generation-Tool

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: ProjectionGen.h  ProjectionSimulator.h  ProjectionsApp.h  ProjectionsGui.h
include/ImageUtils/: ImageUtilsGui.h  ImageUtilsTypes.h
res/: Resource.rc
src/: ProjectionGen.cpp  ProjectionSimulator.cpp  ProjectionsApp.cpp  ProjectionsGui.cpp  main.cpp
src/ImageUtils/: ImageUtilsGui.cpp  ImageUtilsTypes.cpp
